applications/intelliflow/if-identity-mgr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: if-identity-mgr
  namespace: control-plane
  labels:
    app: if-identity-mgr
    domain: control-plane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: if-identity-mgr
  template:
    metadata:
      labels:
        app: if-identity-mgr
    spec:
      containers:
      - name: if-identity-mgr
        image: intelliflow/if-identity-mgr:colo
        imagePullPolicy: Always
        ports:
        - containerPort: 31523
