applications/intelliflow/if-identity-mgr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: if-identity-mgr-svc
  namespace: control-plane
spec:
  type: NodePort
  selector:
    app: if-identity-mgr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 31523
      nodePort: 31523
